feat: blog tags, pinned repos, resume page, social links & bug fixes

--- a/src/app/blog/posts/hello-world.mdx
+++ b/src/app/blog/posts/hello-world.mdx
@@ -2,6 +2,7 @@
 title: Hello World
 publishedAt: '2024-10-20'
 summary: Welcome to my blog — a place for thoughts on blockchain, software, and the web.
+tags: Web3, Blockchain
 ---
 
 ## Introduction
