--- a/src/app/blog/posts/integrate-light-client-polkadot.mdx
+++ b/src/app/blog/posts/integrate-light-client-polkadot.mdx
@@ -2,6 +2,7 @@
 title: How to Integrate a Light Client in DApps on Polkadot
 publishedAt: '2024-10-30'
 summary: A guide to integrating Substrate Connect light clients for decentralized Polkadot applications without centralized RPC nodes.
+tags: Polkadot, Light Client, Substrate Connect, Web3
 ---
 
 # How to integrate a Light Client in Decentralized Application on Polkadot Network
