--- a/src/app/blog/posts/light-client-polkadot.mdx
+++ b/src/app/blog/posts/light-client-polkadot.mdx
@@ -2,6 +2,7 @@
 title: Light Client in Polkadot Network
 publishedAt: '2024-11-29'
 summary: Light Client - Substrate Connect provides a secure, minimalistic approach for Decentralized Applications on Polkadot, bypassing the need for full node installations.
+tags: Polkadot, Light Client, Smoldot, Substrate, Web3
 ---
 
 ## Substrate Connect
